# flutter_windows_store

./: .metadata  README.md  pubspec.yaml
.github/workflows/: test.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: windows_store.dart  windows_store_method_channel.dart  windows_store_platform_interface.dart
lib/pigeons/: messages.dart
lib/src/: messages.g.dart
pigeons/: messages.dart
test/: windows_store_method_channel_test.dart  windows_store_test.dart
windows/: CMakeLists.txt  windows_store_plugin.cpp  windows_store_plugin.h  windows_store_plugin_c_api.cpp
windows/include/windows_store/: windows_store_plugin_c_api.h
windows/pigeon/: messages.g.cpp  messages.g.h
windows/test/: windows_store_plugin_test.cpp
